@@ -1,46 +1,46 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-AUX autoconf-2.13-destdir.patch 677 RMD160 ff71fb18c1676455e267dfd8f3059e8c9384fe19 SHA1 5ef1905e271e078cecea3424560207585868e9cd SHA256 67c3eaf2f8aaf3acbcff387bc3fc6d46688b56a6b51043344e301bfaf16186a0
-AUX autoconf-2.13-gentoo.patch 898 RMD160 c39068cd8477188cde4818049c32b4142689ca0d SHA1 17bdf4d77c8a0c738f20378f0b281fd6ecf57ddd SHA256 5d6a4b9d8d789684b44addf565200a90ee92140d58bebf087373ae82c4d89ea8
-AUX autoconf-2.13-test-fixes.patch 547 RMD160 4f8713f9a046c496c813fc52f5fccbb8d616f97c SHA1 95dcffbc29c8355f11c191d6626b54f1db9403ea SHA256 43929d95e6050642385530df91084d4c073cec5cca727918d5ff84bc1e3059f5
-AUX autoconf-2.59-more-quotes.patch 1223 RMD160 f704db2caacdb3c7eedbe39ec1745503b336391c SHA1 ae3d0e3be5ffb4fc84a30a60e6c78c1fcc45a68b SHA256 0bd6d00b2f77e89684ed7305c3821090950fcc6407ab045fd3ace91ac0b19abd
-AUX autoconf-2.60-tests.patch 720 RMD160 cbae84eb08b71dc034b38d8ad2d915e06180235d SHA1 94f0852872395db32ad25854ea202e8c68254a31 SHA256 96a54f7623bd889f3f8a12c802305a8e07a0dc781796ab78c8f9b61c4644c9fa
-AUX autoconf-2.61-GETMNTENT.patch 909 RMD160 3641e399071ccfbde9c37dfebc6414fc5a28fbfe SHA1 de4e87d3b3757ec96244dbae0620640a96e40b07 SHA256 28b5ea16cad98460e7920456365068d171c1ce1f50b2582c4f393e83e9421d09
-AUX autoconf-2.61-darwin.patch 450 RMD160 609c594a47630f6b96c1ee8e6df9a78e89845be2 SHA1 646e963a6c3f9229b2959fa01efa883d3fb41068 SHA256 b35fcf7ea04a4198f659d60ff8b7cd8d449afe4abfab55d45ea2013ebe35fba1
-AUX autoconf-2.61-winnt-flip.patch 1024 RMD160 900f3b502242f184194211e959cd6a717ff86ad9 SHA1 2101c7dcd23796dfd2f32c2a124cf801e0408b2d SHA256 2600ecdae833fb49a3dc5d8e9ad396c18d22fd0f622b786f536593b5ff117110
-AUX autoconf-2.62-at-keywords.patch 2857 RMD160 1574aa72cc1b8583241c43bd843e8460fc18d2f6 SHA1 c3145c7f8859ec3aff83e31e4afdb09f953e8b60 SHA256 dea4a6caef01566f252ce71c6fb9b5aff07faa918925c10a2c5a7b4b68f1c2a9
-AUX autoconf-2.62-fix-multiline-string.patch 1040 RMD160 b9038df63126c43970329ea209285497ad5c6e60 SHA1 feb6dd8332d7637990a76b2446f5d2e6e508b3bb SHA256 853bf209c69610d5a9f95dc6637342651eacdfe7255198228c2995fca2c4fb36
-AUX autoconf-2.62-revert-AC_C_BIGENDIAN.patch 7040 RMD160 42ef4aa0cef1ef22335e1afdd867afe057ccf00f SHA1 db9e27d78885cb7cef238dc3121b08653b4ebac6 SHA256 5dcd1437891ad33ce81219b27429f94ff56ad7216b7b707427ae028bdc60f610
-AUX autoconf-2.63-sh.patch 1224 RMD160 47993612f0b44ad97d84ad5a481c8532c31165db SHA1 97ee64570bef2cfdb006f0ef1374c1be0426b1f9 SHA256 1b236cd09c14f5f74eddcb12b001db9c51c624e57f13fe627085d02ed67c0809
-AUX autoconf-2.65-AC_TYPE_INT_T.patch 1760 RMD160 6346c3d725560f667c286a239408f30f887ba504 SHA1 33dbdcc37849493520fb3a33c90a9140ada1d57a SHA256 b9007a68db2b791ccea64b5f9984b11a38bc7a86c41ae2961293aebf18865bfc
-DIST autoconf-2.13.tar.gz 443844 RMD160 0d1fa0992280ed71c0d72487a5a4c246d1c1b18a SHA1 e4826c8bd85325067818f19b2b2ad2b625da66fc SHA256 f0611136bee505811e9ca11ca7ac188ef5323a8e2ef19cffd3edb3cf08fd791e
-DIST autoconf-2.59.tar.bz2 925073 RMD160 792c45aade68e2ed19a0e4c6ebc0e20cb8298e1a SHA1 d366a07b2d99c95b7f24395aa8a8e023d8b93b69 SHA256 f0cde70a8f135098a6a3e85869f2e1cc3f141beea766fa3d6636e086cd8b90a7
-DIST autoconf-2.61.tar.gz 1396855 RMD160 ec5f512aec24b3cc5a9968e96d261558e45471b5 SHA1 69f37c509a4757d747b6f4c091d209ab3984d62f SHA256 9d14f2ed0d1b6f8180498a66517f511c7c49c870d6873219a3ff4b8b3082a68b
-DIST autoconf-2.62.tar.gz 1518427 RMD160 316220038dd0fc131fd93e1fbfe422f7c67b4164 SHA1 74b2fcffb32b16d248103f42111284331d7bab75 SHA256 83aa747e6443def0ebd1882509c53f5a2133f502ddefa21b3de141c433914bdd
-DIST autoconf-2.63.tar.gz 1562665 RMD160 4254fd31f9bcaf8932e2c10cf33f52b9f7f7eb19 SHA1 d42eebd3d342925116c3cb942e9320d5803fcb1a SHA256 b05a6cee81657dd2db86194a6232b895b8b2606a30a399c3a566d9259366744b
-DIST autoconf-2.64.tar.bz2 1313833 RMD160 cf498949b3cc0a6bc465a50114c98750871bcf49 SHA1 dfbcdbd7dd74a52130dda324e9d94ee0b8551466 SHA256 872f4cadf12e7e7c8a2414e047fdff26b517c7f1a977d72433c124d0d3acaa85
-DIST autoconf-2.65.tar.bz2 1332522 RMD160 250b0f46ae6f81fe47f30ae61335a2291d736197 SHA1 9126ffb8d7d59f38f305ef53e208531d4b75bb87 SHA256 db11944057f3faf229ff5d6ce3fcd819f565455c152b72cec17ebc1cbb80136b
-DIST autoconf-2.67.tar.bz2 1369605 RMD160 2aa37e58f3629827f7c19350ad035a452711984f SHA1 0aa3dff106c6373e26dab75a516a696c900317a6 SHA256 00ded92074999d26a7137d15bd1d51b8a8ae233a6cd165a38f34ccf7b1a78aef
-DIST autoconf-2.68.tar.bz2 1381988 RMD160 8990457b60d27509a7dc9be595a5002a854af30f SHA1 b534c293b22048c022b1ff3a372b9c03f26170b4 SHA256 c491fb273fd6d4ca925e26ceed3d177920233c76d542b150ff35e571454332c8
-DIST autoconf-2.69.tar.xz 1214744 RMD160 666aa45a58e856968c651e2a3b44be38de9c14e4 SHA1 e891c3193029775e83e0534ac0ee0c4c711f6d23 SHA256 64ebcec9f8ac5b2487125a86a7760d2591ac9e1d3dbd59489633f9de62a57684
-EBUILD autoconf-2.13.ebuild 1720 RMD160 eaccdff1008f4753c38e8e2c73ce3ffc27f52fc3 SHA1 3d6e90967d15e31a9f25e9e52d491c84e44dc092 SHA256 4ab86839088c2deaac86daf6646c9419ea5c042e00bad6f1c359ebc79ef53091
-EBUILD autoconf-2.59-r7.ebuild 1401 RMD160 902a5923816c18c3be91bae7f1e0868b82f586b8 SHA1 e4cea98069aacf79088433f1033e86a7c34d76c6 SHA256 b70e292dca0f40b47301c884a0bdb84956e470b11107168d13b212fe37476472
-EBUILD autoconf-2.61-r2.ebuild 1700 RMD160 8cad7bd8b38feca072a953a503179544f006292b SHA1 3dcc10489edea4618462dd4f274cddf3d8d8edae SHA256 4539ee49183eaa6bc4b9c64f022844091425d1a02642abc6fe2a8472ea506463
-EBUILD autoconf-2.62-r1.ebuild 1636 RMD160 7f9562e2e1bb2b4836ed0a2ae391d0f183c23ee7 SHA1 685c92235111140133e7b911d4b7035219100b01 SHA256 bd43a8d1efbcc39126e009d6151de8805b228f3dce608e34f7de920624f56673
-EBUILD autoconf-2.63-r01.1.ebuild 1557 RMD160 4a19046439edcefb03b49ee6fb24a373c9efae13 SHA1 e58e74f357d73fa6ba3609909535b70b84b41dfa SHA256 42dde8390c56e390eb857d9edf736ed641a80fdd226512de7a25e868296b524d
-EBUILD autoconf-2.64.ebuild 1559 RMD160 7802f3e48527129ba7155f1e0df650d2554ed071 SHA1 3f01900074fe3d5798f555c74ef3bd2afb6b23eb SHA256 e51b0daf84e2fe17a1deb19427360a66b972ad2813d68b78fd2c12a42722c06f
-EBUILD autoconf-2.65-r1.ebuild 1618 RMD160 5412f96d8e4a0fc2e87d30a4e2d4e76519b752c2 SHA1 66f0fa3784f3d796179420b7234dbc898fdb1521 SHA256 1e64ba283f1a15950dc3cdcd6c582bf7b1f3b52cdaad7a8c45c25cf7b37a9309
-EBUILD autoconf-2.65.ebuild 1562 RMD160 92e8f145cca98d607a14b3da81ec29f24bd447db SHA1 ec3e1b92c732d902c04d1b0254da130685c042c5 SHA256 1a1630359f5ea3a3ed5bf55414fb754ccadcf91429e2252942409e259af10793
-EBUILD autoconf-2.67.ebuild 1661 RMD160 ef7eeb3e8a64d42c652f0d9a3302107220d23cd1 SHA1 57c17b5103f0db7e6397482bf42def984edf7738 SHA256 065058d445b93945b7bf6ee24d8a5aeb4af493f5d11ef3e5db3ad803f3320a3b
-EBUILD autoconf-2.68.ebuild 1658 RMD160 371905851dd239ab7c908c214654581fb53f4e0c SHA1 92fa3085d44f4a94aff7da09bcdb2f5d9adf64fb SHA256 ff76489fe643ec8c409f028ae2a7793f3775d25eea3160706d0492a25cb53f0c
-EBUILD autoconf-2.69.ebuild 1709 RMD160 c5118da532357f553f213bd1a6b6500af78dcdeb SHA1 5a927c0dc43567673743f743644c1bc709ae49d7 SHA256 e58e1cef7d8eba3c39829253d13b7dae2831b8fddb7d6c7099e8db0a060a26a0
-MISC ChangeLog 23144 RMD160 367841dac4d807dfbb391e0de9ddf81338828956 SHA1 8bbd2f958665875564269975eeaa238502eb9f4a SHA256 847fcb056240d74b3d3f939e20bec3837dedd80d1f8b8e982d010cd33090c0cd
-MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
+AUX autoconf-2.13-destdir.patch 677 SHA256 67c3eaf2f8aaf3acbcff387bc3fc6d46688b56a6b51043344e301bfaf16186a0 SHA512 eeb9619bdc365fb3877b816e30192fb235b8c7fed9e810da0382363141abd9b5df217cda31a7dd1eb51d6310714412709fc830fdaac55a6ccfcfd8335f752c54 WHIRLPOOL eb39bea4db9e92a1f4329502777051cc1ba31e3c70e93c7482cd8b266674996307b71e09677fa3f0763b91b70c69b66a2a3a06b0f3fe182a87a6d864d877b26a
+AUX autoconf-2.13-gentoo.patch 898 SHA256 5d6a4b9d8d789684b44addf565200a90ee92140d58bebf087373ae82c4d89ea8 SHA512 8195ea24bd1fbcba20cd09de12dc90879a3d6e2877179d43830abdca6c68148c2bd611b1d3919777304945a08e0d939aa868bb689558515af6b0b10524f16e5c WHIRLPOOL aaba69e3f2450309abd27e578f7ae26986bf288f623a821219a78ddddd68504fc880624bbb911adb55c15cd7673daa3fe35fb840729495f23a1960d41edcea0f
+AUX autoconf-2.13-test-fixes.patch 547 SHA256 43929d95e6050642385530df91084d4c073cec5cca727918d5ff84bc1e3059f5 SHA512 085e7525c66e710b42dcb068c8aeda89488d1e926e493bcab74e1a1440f53f67630d6998a2a9eff6dc65cf8f71cad19127d541422b51a2519163b51ba78ae592 WHIRLPOOL 8d4865e93cca21cfb6735996cd6e7e920bb3131ea45c63398cefe7c8aca40d6611f1a8142f8c4bdc153c5894200637e4c2a705a26535d3214067a487969b17d4
+AUX autoconf-2.59-more-quotes.patch 1223 SHA256 0bd6d00b2f77e89684ed7305c3821090950fcc6407ab045fd3ace91ac0b19abd SHA512 8736ba977b80f78a291837377435d2c9f2ede4bbe56acbeeed0951cc36961c510c792bb87973d1bf26d6f6cb9949bafd5a56f80728198a18b85ad8e500a06cda WHIRLPOOL c3d673fc4c3909202721e2e4a69cec391608028dba533cd43bd904742122871f59f9ee2d6d96f86219ce3085c749f695404b6d94c63eb5c21c598533d9111854
+AUX autoconf-2.60-tests.patch 720 SHA256 96a54f7623bd889f3f8a12c802305a8e07a0dc781796ab78c8f9b61c4644c9fa SHA512 32ccfeca628dbfba1e3faac433797877709b062af5d50ff28cf8b6ea66d33790054053b57119f375a405037c3bb6b9231355e483dac4d45264167f47fa1f5f7c WHIRLPOOL 80b6e53bd13f8eb324e9e3286d0e684077911af8741ae2c53a3a6cf9429015eb2a4390ad1982a886668211f4b316955448575318a3dc4dd1fa6043e61a544bfc
+AUX autoconf-2.61-GETMNTENT.patch 909 SHA256 28b5ea16cad98460e7920456365068d171c1ce1f50b2582c4f393e83e9421d09 SHA512 64760743ebb25a7a1e9de79bafebf6f22098e14b311107f3f662e60601f45c15b6296f48eee87efa572041b1d69b8a484286550b84d6937e511befa1f00ab2a6 WHIRLPOOL 27f0510299058f3e02413c48b5dbde535211cadb94404804ed4b1914154c306423c7566605bc14d2e6f002b4aa2894a04b08308620f0d92fe3d0cfc92ca43978
+AUX autoconf-2.61-darwin.patch 450 SHA256 b35fcf7ea04a4198f659d60ff8b7cd8d449afe4abfab55d45ea2013ebe35fba1 SHA512 b698bb51a1264ce92cced79906926a473d37eaf7dcf5d6d599c6c6012910391933e19a7a436cd0c93f817f56f6749006777bb914648eab8da96ecca0c1e2cfd1 WHIRLPOOL 7f20f4034b02e488c1c2e40b64c760eb5c666328da34409a70fb615606c658c7222a05a926e8464d9661052a5529b2a9e099f9adc53dd25f900669fdd059034a
+AUX autoconf-2.61-winnt-flip.patch 1024 SHA256 2600ecdae833fb49a3dc5d8e9ad396c18d22fd0f622b786f536593b5ff117110 SHA512 7c0e98f3248de8d68b5a997f8ffc4b8f1dc085c57190721fd7ec203bdc56e2cd5a7697d0fba8ce1a04f2cb1bb1331aabdeffa3bf1959d44a78cba3c30b2dc9a2 WHIRLPOOL e84e682d79514ebae463e07b05d8ea74b34db8bc69b80291cd824b4a0dcb116d0316ea37d3033473769895063f7b1f54f89d6fea802780c8f9d58223872753a9
+AUX autoconf-2.62-at-keywords.patch 2857 SHA256 dea4a6caef01566f252ce71c6fb9b5aff07faa918925c10a2c5a7b4b68f1c2a9 SHA512 5cd214d51b9157377850a9a8a2e8338352828c0edb0e0e2ffb50f6439d1fac580202a8a02f0e461f6311a27d5ff52d4d86f2146ee7fef1b07b700f253a0a6152 WHIRLPOOL 0c85f92810afe53912bbb1f6a8a3be2176e0c710a8d1b4af85c85d898fc307998f788fe3547d966b43fe2734cea06e6fc0f464c07070018cf510cfa98ef671a4
+AUX autoconf-2.62-fix-multiline-string.patch 1040 SHA256 853bf209c69610d5a9f95dc6637342651eacdfe7255198228c2995fca2c4fb36 SHA512 0f4ff3d2121ed05881d7e8cc3546340abdec80b0184ca7e7d115e507d52943997564ad699c3b4ed90fb38087e8a8ebd8f48638339e7b175efc4b25ad02ecc7ee WHIRLPOOL c21cfddf7569bd1a7a601b42ec9b636892bac5a08a05a5af5d06a5222e54006759cef026c3741cddfc83586f36ca1ee985e35f9bb53753360357e4ab5dccb570
+AUX autoconf-2.62-revert-AC_C_BIGENDIAN.patch 7040 SHA256 5dcd1437891ad33ce81219b27429f94ff56ad7216b7b707427ae028bdc60f610 SHA512 3ded7bbdd4ca3443457f0aad7aa8324f1825f155cf43a3bffb3a018653aeeb30404884e42d0abeaf6c3456e1c6aeb19add87d192237111beefed796063461f51 WHIRLPOOL 5b2ceb97d35218e1698f74a0d72cfe13d8365c01cb3f98b4378ab5f0a757e8456bedfae17d00b53a8c03e5693b9660aa3d9f8a56957ae81530859b082e1e6502
+AUX autoconf-2.63-sh.patch 1224 SHA256 1b236cd09c14f5f74eddcb12b001db9c51c624e57f13fe627085d02ed67c0809 SHA512 c82a75c5f04f86f05254150f31c001152feeaf56f5aa662d8df05e6efc1ab751b5d353aa0e4b56ca0de8034cb4bee8283e9ab68977094e04225f06985d3bd539 WHIRLPOOL 4a63c1604883531764c9cf844ea285e7846914409f1b5fb61c83d7fbda73c12d0e69d6ff1ffe5a655e7876eb719235dff5e71dafa4619d35554578901392c084
+AUX autoconf-2.65-AC_TYPE_INT_T.patch 1760 SHA256 b9007a68db2b791ccea64b5f9984b11a38bc7a86c41ae2961293aebf18865bfc SHA512 30bd03debaf74c21f435da00f399a7e1bdcd6e661a7565d240793353507f949cc60b9a31bd2a5f53ba3a909d0171f4afa407f20888e4ff23e5962a5ddbb612c7 WHIRLPOOL 1bd8f1b7cdb892978d898f55d8fb079706719db58d8e7cd67cfbb8741ade271377a8b04a5027d4f0d37759501f467984743f267ee2d7332304f3be60e5c298bc
+DIST autoconf-2.13.tar.gz 443844 SHA256 f0611136bee505811e9ca11ca7ac188ef5323a8e2ef19cffd3edb3cf08fd791e SHA512 602584f4c77b7a554aaa068eda5409b68eb0b3229e9c224bffb91c83c4314d25de15bd560a323626ff78f6df339c79e1ef8938c54b78ecadf4dc75c5241290ad WHIRLPOOL 918e5e4679f0a2ae84299f190904be05f2c69e8cddf97c6b1a6e82ba20768f4c97ac451b0b6159800bad6635633f9d772a403be8c724ea782bf7725d2905f180
+DIST autoconf-2.59.tar.bz2 925073 SHA256 f0cde70a8f135098a6a3e85869f2e1cc3f141beea766fa3d6636e086cd8b90a7 SHA512 0f57e57b94ef78d59e68476746e78de9c8d0c07bcfdbdb850c2e68b59cdbef7e6256a073d1ae8965abd30611f22c1dc451ecdf67aff43102f73ec118c51ab4d6 WHIRLPOOL 4330fe3d19c26759e7babd2470cf3fb3cc8c6632fee6014ca33c2f8339ddb3114f4376b14cad4126a4dd496aecfc3f68d623061752836094c893894ede693a8b
+DIST autoconf-2.61.tar.gz 1396855 SHA256 9d14f2ed0d1b6f8180498a66517f511c7c49c870d6873219a3ff4b8b3082a68b SHA512 ac46787707aa5fb421babecacb48936f3997a2371e4d2b7575ce922c0c04b994977ba12113bb19fda84cd4104479090fd7c9ebceb8c20a98fdd9beac4661a91b WHIRLPOOL 243589e47337c1344ba399c9c4c28b41188239f97cdb109b6a4f6bede12c184036247f70db83da41cc36a46e5d45227e34dbb83544699787484a0d994b9ffa4b
+DIST autoconf-2.62.tar.gz 1518427 SHA256 83aa747e6443def0ebd1882509c53f5a2133f502ddefa21b3de141c433914bdd SHA512 7d51ac8ff598660b65f0d90f4558af3d61e21545f589ab42202527ddc5c7937bc111199a20662c2a680154ac73bd9a44a64726f63ff7058ade16455deb2b61f5 WHIRLPOOL 7ed2c5908959933b8df627b44118cecbc9b64089970de2d04afa62baa53daca7997d92bc6573c5e3198f6cf595dec389fd9fcb86d522faa5bbffe517a1372ba1
+DIST autoconf-2.63.tar.gz 1562665 SHA256 b05a6cee81657dd2db86194a6232b895b8b2606a30a399c3a566d9259366744b SHA512 429dba7221fc668de3c9a7dca2b43ba182c82ac14cb70f8cd8d12b80538e2a9638f1c23f7421f38418ab25d9c9f51ad2646aaf61aa45a4e300f2061dc8c418a9 WHIRLPOOL f361d28f1992014fea83e5b0be6c451f5805044d2f40b5c854e40c1d015dfc0271fdb43bb5c0ab9092864d10feecb969493610fbd01f07b6b0553681c06b9ed9
+DIST autoconf-2.64.tar.bz2 1313833 SHA256 872f4cadf12e7e7c8a2414e047fdff26b517c7f1a977d72433c124d0d3acaa85 SHA512 ae226d517e875a4e58006c3879c305a9a72316040a9e7908331cd84764d28de399ff082fe9c0cb18485c028ae7b91f8458318ec4960fbfb2e58b1270dc3daf18 WHIRLPOOL 2b02c78bfe86af7b4f46ee31d1462a843cc6baa374e9fa69f92b8fe8bc7ff15c66126d233ca89dd217c46a7a818f2f9040f10c5d24f3f5716542451784a67118
+DIST autoconf-2.65.tar.bz2 1332522 SHA256 db11944057f3faf229ff5d6ce3fcd819f565455c152b72cec17ebc1cbb80136b SHA512 1d96a5ba8c63d54a59e2739c9f4df16c14e8cd72f27c8565f4f1c8dbe4fdc8ab98a0a75929d4f1039fb225666d7ebbb9030f185978ff72de99d421edf70fe045 WHIRLPOOL bdb9017390ef1a00b0bef6303421fef27c4443512703f04fe4ff33807796e4065d41813486a8d6ca72a90aef579ebf69aed3f54325ffc1bfb1816efc8aaa2671
+DIST autoconf-2.67.tar.bz2 1369605 SHA256 00ded92074999d26a7137d15bd1d51b8a8ae233a6cd165a38f34ccf7b1a78aef SHA512 366f39e23a49a4f76ce901278286f00473d838dc3730b29dd29707276362aa5566fe1890856a221fa1c494c1304756a82924ec1b6ee0bce0e80ddd657386dd5a WHIRLPOOL 2fae4ade453f2e3b77766d03d36bcf3c727aa08d40b7fafe939aa03040f6965f92ca1d39888957d55744cd84db3c910967471f862149847f0008f851133beb30
+DIST autoconf-2.68.tar.bz2 1381988 SHA256 c491fb273fd6d4ca925e26ceed3d177920233c76d542b150ff35e571454332c8 SHA512 77f42d7a3825a398531ab52bf05936720788167f7d04f884a2acb7745edb60a706799451ff983f1048bc929cd38972ab29530a5e4ed6f686ff1700e0281a7e84 WHIRLPOOL 9edc133292a40e024f9f18e40942717342b540056f2fe4b361c4a514ec908d8e04210e714cf6cdb5752673f6fb5cc4ba6e9d624b96f9ef12b4b9e9838e1498a6
+DIST autoconf-2.69.tar.xz 1214744 SHA256 64ebcec9f8ac5b2487125a86a7760d2591ac9e1d3dbd59489633f9de62a57684 SHA512 995d3e5a8eb1eb37e2b7fae53c6ec7a9b4df997286b7d643344818f94636756b1bf5ff5ea9155e755cb9461149a853dfbf2886fc6bd7132e5afa9c168e306e9b WHIRLPOOL 9d806d685b9951acb15ab837b08437a6632f0907f105057e84ba3e0d99539371c32153333f459f04fb537cbb96a80e4418937e937381aec677b319ad667f7918
+EBUILD autoconf-2.13.ebuild 1921 SHA256 a27a54858d5fc771d9d96065ec963c81cd7a221a382a50ef51949e5f4f786ae1 SHA512 ad5b553e591a8741711cc968c5383e0b5ed96154c236850823f87b3c0c92d56e1b509d1ae60a2c37d081da8d63a9f0c822a1698eb75f78c3a08133f9e3ce9ce6 WHIRLPOOL 80a1e6ab1bb5f3416b7f1689d42c102c20a65e47c84d9e9bed07d39c38edbf588d800d8aaf88144912db8c5a91e99897577bdd81dd1417b8cc42df06a74e39df
+EBUILD autoconf-2.59-r7.ebuild 1401 SHA256 b70e292dca0f40b47301c884a0bdb84956e470b11107168d13b212fe37476472 SHA512 d37160abcb33f2eb526071d0a89eab6ea560b7ed5dcd901e34cdfe227d0c4bfac8a49446828fb2b30441f11bc50280c23ec06748b39e63bffb6c254922b3731d WHIRLPOOL 0a4ac4b14c1d10283327d97abd8d9a201bc91d7ffed4d0ecd2e182ef4a3de389a4b1130180a2ce5301b1203804a1a0133b216b81c882ca0a1024bf5cd7664d2d
+EBUILD autoconf-2.61-r2.ebuild 1700 SHA256 4539ee49183eaa6bc4b9c64f022844091425d1a02642abc6fe2a8472ea506463 SHA512 f44ab9116548df4501f1e41896d983fd73d514109f7f6b7d0009f71791c0e9a77884d492e7c6454738c1ec76f7c7f0b2ed7f19d99fec1527f32786e8add6d055 WHIRLPOOL a20989d26a1d70db61ea1437faa24ea4ae0634b1609142cef7b797fd6d29382922831ad8733c876d386172613bce52f1b2686a8ba36b351c0f36df0ec1625a09
+EBUILD autoconf-2.62-r1.ebuild 1636 SHA256 bd43a8d1efbcc39126e009d6151de8805b228f3dce608e34f7de920624f56673 SHA512 7bd8bb972b5b41b457b0ed4b7f82744bd7123ac8205fdca6a54e15b2738cb4d2fccef830659c6628a2599aba865c303655cffed37197509d31ac8a1af41681e0 WHIRLPOOL 55fe8696c093de3fd5b53278b908bf404b1abddeef4daa242f83a96517f5a2958bdebbcd0006ed5ca567535b2ef3cda56d486b9e3f0de4bc4b10256c769f3547
+EBUILD autoconf-2.63-r01.1.ebuild 1557 SHA256 42dde8390c56e390eb857d9edf736ed641a80fdd226512de7a25e868296b524d SHA512 efd00ead7f1451dd308b3db00b7b9eb195a0bb5ab6703107c6806c3e6944a14978a60919389ab6291005207c50a3c56e61ac5bd661e0f4661b3515a11cd11d8b WHIRLPOOL 04ff20afc54fc2f8d270398c9d97b258020c1afd2048ade8916f0ad9add163fd9826749a9a1a560e19e7630dbd934da7869abbe0dd8d913c71bceed2a26a2389
+EBUILD autoconf-2.64.ebuild 1559 SHA256 e51b0daf84e2fe17a1deb19427360a66b972ad2813d68b78fd2c12a42722c06f SHA512 cc4200a2c32a81eef124c78b099d8182e7173cf40f60f902b11ce1c2f7a6d26da2802ca29b7842eef9cc2a84e446b9efa8d445b58f368d7b5a1c46203ff094ac WHIRLPOOL 568eb8d214f2d1866de9dc70469537abdaf462f764ef86ee7faa2b6de669db491713a8ba3dec232283f01abb8b7b3b23c936a485dddfb84f63a672cdc5a694da
+EBUILD autoconf-2.65-r1.ebuild 1618 SHA256 1e64ba283f1a15950dc3cdcd6c582bf7b1f3b52cdaad7a8c45c25cf7b37a9309 SHA512 a64e39d6993cfd2c46c42481ed220632b85f44745b13fe3c1c34057d58aacb8709154231b0d7861ae0e8f3854bafbacf2b8ae70851eeb80448b1b1c1e9094c71 WHIRLPOOL b8f6439e0b14fac4902c4be86b361278d54e6b1ff102adde8fae9605b3d937b8fa6bc3dbbe0f4d0ae90ab242e2139104cd16a18749ee421a492052492f3d7ddb
+EBUILD autoconf-2.65.ebuild 1562 SHA256 1a1630359f5ea3a3ed5bf55414fb754ccadcf91429e2252942409e259af10793 SHA512 e497f000fc0213c55c702bd860a455c3a1706f9995a05a1b6d19a6742509d6244c7a3360de8636cb0d3d2d1311f131d119da5dd5f3fbf4b3a2863c10c8043cb3 WHIRLPOOL 968da4305a5ad1c357ee7142fab7ae601c304214b0c3f1a219a282ac602b5992347f51c034d2454aa43835f8673eb5198255c51a2d67a16ff0b76cb79dccfae3
+EBUILD autoconf-2.67.ebuild 1661 SHA256 065058d445b93945b7bf6ee24d8a5aeb4af493f5d11ef3e5db3ad803f3320a3b SHA512 6fec80697de74458f8538052e62c4b4cf2496b5c27edd0a58af3777250300d50643c9ed511e9de2f97691ca7b6965fc2a3539b02d4f3bc8720cf1a594e25e1a5 WHIRLPOOL 3abf02de595ff72cae3316306059150640971c5256fa9d90610ee4d28e2aaf4291aab0faa147a443a26d98290725bad213b347c55ff03ef68e17813136995537
+EBUILD autoconf-2.68.ebuild 1658 SHA256 ff76489fe643ec8c409f028ae2a7793f3775d25eea3160706d0492a25cb53f0c SHA512 1dd3fbd2f8e50ee6e07b47a27ad0281c083bc5aa792a24dcca71cb84465ff001aec1d1725852f33e49dc6dbf5a48c81c80c315047fa1b5def368ff4480ca8868 WHIRLPOOL 095edd2f81f35080dd4581393cf625a11971f1acddac2b5a3b803201f6599d2d39f8bef7fcce9f913506fee244b11a63d513a5ddd1d2a1fdb5abbea3bdf797bb
+EBUILD autoconf-2.69.ebuild 1709 SHA256 e58e1cef7d8eba3c39829253d13b7dae2831b8fddb7d6c7099e8db0a060a26a0 SHA512 2831cd61f28b4792b5ef74a24ee7d59cdfc1f34f822092d5d292eb68573e3e3b3a273ff07fadb302e26fccccddaaff39432bb200049ebfe0a10794f155af6605 WHIRLPOOL c9ac82a477b458c5bf21eae0967aba22327294c94e3f1cab35e9087fd7ef5f7e4ae2b190cc586399e1b6f4cd82913e78360eb6c488071e4b06a426a7fd4bc37e
+MISC ChangeLog 23272 SHA256 f93269041458c7fa87b3636e0eca4f388ffa306c7311339740668de54ee56ca9 SHA512 8eb9f14e1a5f9941e8c7b61c902bf5a5aa967c0f92dfd08bb2a47caea91073ca541e79557741d613b420b04ff34243761f5d0f67a4c8037cd3c8394801c955dc WHIRLPOOL 8d20af028d5cd4b6a6299afc142d058ad951dc31a660852a6b017985db1b9e9fbc300c05049c644a1e84d7aad848a4cd70c7a814356e9afb5a058e6efb2bfc8a
+MISC metadata.xml 164 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 SHA512 8eb0d5153d388f6ea069c64b93882244816a0a09aecc0d73cb872121ce0eb24c5ccafa96aad0b620b2300f319e1af101fa7fa6c5d0d561719d49bb07da0a2eca WHIRLPOOL 11a1441bddb7a6c69653c663902b7da5767ae6ad515ac2aabfc42fe37927a1ccc21472deeee454009ff720201a41c3e4a912df42661a0a87150fb46126da2d52
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk/AvWkACgkQX3X2B8XHTolpSQCbBmleP8fZ8EgZ6WkKkcfCcsJv
-UJEAnjaVJd038jR7vASTeY4iqgtpaKMD
-=HY9p
+iEYEAREIAAYFAlCLvWoACgkQX3X2B8XHTolSwwCfU0Ou5LNmXLzd8fSku8Z3QcOn
+9foAnjXRlsRXkZxkyw6tYyS+OWM6UrKI
+=faO9
 -----END PGP SIGNATURE-----
